--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <script type="text/javascript" src="scripts.js" defer></script>
+    <script type="module" src="scripts.js" defer></script>
     <title>Gabriel Marques - Software Developer</title>
   </head>
   <body class="portfolio-container">
@@ -29,24 +29,7 @@
       </aside>
     </header>
     <main class="content-container">
-      <section id="hero">
-        <h3>Hi, I'm <span>Gabriel</span> Marques</h3>
-        <p>
-          Software Developer passionate about building scalable, high-quality
-          functional applications,
-        </p>
-        <p>always focused on delivering great user experiences.</p>
-        <div class="scroll-down">
-          <p>Scroll For More Info</p>
-          <div class="arrow">
-            <svg viewBox="0 0 30 30 " xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M 5.21875 6.6875 L 3.78125 8.09375 L 16 20.3125 L 28.21875 8.09375 L 26.78125 6.6875 L 16 17.46875 Z M 5.21875 13.6875 L 3.78125 15.09375 L 16 27.3125 L 28.21875 15.09375 L 26.78125 13.6875 L 16 24.46875 Z"
-              />
-            </svg>
-          </div>
-        </div>
-      </section>
+      <section id="hero"></section>
       <section id="about">
         <aside class="information-container">
           <div class="profile-pic">
@@ -166,34 +149,8 @@
         <article id="aboutme" class="aboutme-container"></article>
       </section>
       <section id="experience">
-        <section class="profession-container">
-          <h2>Professional Experience</h2>
-          <article class="card">
-            <p class="role">Software Developer</p>
-            <p class="company">dti digital</p>
-            <p class="role-summary">aqui vai a breve descricao do cargo</p>
-            <p class="start-end-date">Oct 2024 - Mai - 2025</p>
-          </article>
-          <article class="card">
-            <p class="role">Software Developer</p>
-            <p class="company">dti digital</p>
-            <p class="role-summary">aqui vai a breve descricao do cargo</p>
-            <p class="start-end-date">Oct 2024 - Mai - 2025</p>
-          </article>
-        </section>
-        <section class="education-container">
-          <h2>Education</h2>
-          <article class="card">
-            <p class="university">Centro Universitário UNA</p>
-            <p class="graduation-field">Bachelor's degree, Computer Science</p>
-            <p class="graduation-date">2024 - 2027</p>
-          </article>
-          <article class="card">
-            <p class="university">Centro Universitário UNA</p>
-            <p class="graduation-field">Bachelor's degree, Law</p>
-            <p class="graduation-date">2016 - 2021</p>
-          </article>
-        </section>
+        <section class="profession-container"></section>
+        <section class="education-container"></section>
       </section>
       <section id="skills">
         <h3>Skills</h3>
