--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <aside class="information-container">
           <div class="profile-pic">
             <img
-              src="/resources/profile-pic.jpg"
+              src="resources/profile-pic.jpg"
               alt="profile picture"
               loading="lazy"
             />
@@ -132,29 +132,6 @@
                 aria-label="Instagram Profile"
               >
                 <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                  <!-- <defs>
-                    <linearGradient
-                      id="grad1"
-                      x1="0%"
-                      y1="0%"
-                      x2="100%"
-                      y2="100%"
-                    >
-                      <stop
-                        offset="0%"
-                        style="stop-color: #f58529; stop-opacity: 1"
-                      />
-                      <stop
-                        offset="50%"
-                        style="stop-color: #dd2a7b; stop-opacity: 1"
-                      />
-                      <stop
-                        offset="100%"
-                        style="stop-color: #8134af; stop-opacity: 1"
-                      />
-                    </linearGradient>
-                  </defs> -->
-
                   <path
                     d="M20.445 5h-8.891A6.559 6.559 0 0 0 5 11.554v8.891A6.559 6.559 0 0 0 11.554 27h8.891a6.56 6.56 0 0 0 6.554-6.555v-8.891A6.557 6.557 0 0 0 20.445 5zm4.342 15.445a4.343 4.343 0 0 1-4.342 4.342h-8.891a4.341 4.341 0 0 1-4.341-4.342v-8.891a4.34 4.34 0 0 1 4.341-4.341h8.891a4.342 4.342 0 0 1 4.341 4.341l.001 8.891z"
                   />
